--- a/leningrad/app/authentication/registration-style.css
+++ b/leningrad/app/authentication/registration-style.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@400;700&display=swap');
 
-html {
-  font-size: 16px;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -14,7 +10,7 @@ body {
 }
 
 main {
-  margin-top: 6.25rem;
+  margin-top: 100px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -22,7 +18,7 @@ main {
 }
 
 .text {
-  font-size: 1.5625rem;
+  font-size: 25px;
   color: rgba(112, 111, 109, 1);
   font-family: 'Geologica', sans-serif;
 }
@@ -36,27 +32,27 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 0.125rem solid #0D74BD;
-  border-radius: 3.125rem;
-  width: 46.125rem;
+  border: 2px solid #0D74BD;
+  border-radius: 50px;
+  width: clamp(300px, 80vw, 738px);
   max-width: 90%;
-  padding: 1.5rem;
+  padding: 24px;
   box-sizing: border-box;
 }
 
 .form {
-  height: 4.5625rem;
-  margin-bottom: 0.625rem;
+  height: 73px;
+  margin-bottom: 10px;
   background-color: white;
 }
 
 .form-1 {
-  height: 34.5rem;
+  height: 552px;
   flex-direction: column;
   justify-content: flex-start;
   background-color: white;
-  padding-top: 2.5rem;
-  margin-bottom: 0.625rem;
+  padding-top: 40px;
+  margin-bottom: 10px;
 }
 
 .form-content {
@@ -70,27 +66,27 @@ main {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-bottom: 0.9375rem;
+  margin-bottom: 15px;
   color: black;
   font-family: 'Geologica', sans-serif;
 }
 
 .input-group label {
-  font-size: 1.5625rem;
+  font-size: 25px;
   color: #0D74BD;
   text-align: left;
-  margin-left: 1.25rem;
+  margin-left: 20px;
   font-family: 'Geologica', sans-serif;
 }
 
 .input-group input {
-  padding: 0.625rem;
-  border: 0.125rem solid #0D74BD;
-  border-radius: 2.5rem;
+  padding: 10px;
+  border: 2px solid #0D74BD;
+  border-radius: 40px;
   width: 100%;
-  font-size: 1.125rem;
+  font-size: 18px;
   text-align: left;
-  padding-left: 0.9375rem;
+  padding-left: 15px;
   box-sizing: border-box;
 }
 
@@ -99,54 +95,42 @@ main {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin-top: 3.125rem;
+  margin-top: 50px;
 }
 
 .form-links a {
   color: #0D74BD;
-  font-size: 1.5625rem;
+  font-size: 25px;
   font-family: 'Geologica', sans-serif;
-  text-decoration: none;
-  margin-bottom: 0.3125rem;
   text-decoration: underline;
-}
-
-@media screen and (max-width: 768px) {
-  .box {
-    width: 90%;
-    padding: 1rem;
-  }
-
-  .input-group label {
-    font-size: 1.25rem;
-  }
-
-  .input-group input {
-    font-size: 1rem;
-  }
-
-  .form-links a {
-    font-size: 1.25rem;
-  }
+  margin-bottom: 5px;
 }
 
 @media screen and (max-width: 450px) {
+  .text {
+    font-size: 16px;
+  }
+
   .box {
     width: 95%;
-    padding: 0.75rem;
+    padding: 16px;
+    font-size: 8px;
   }
 
   .input-group label {
-    font-size: 1rem;
-    margin-left: 0.5rem;
+    font-size: 16px;
+    margin-left: 8px;
   }
 
   .input-group input {
-    font-size: 0.875rem;
-    padding: 0.5rem;
+    font-size: 16px;
+    padding: 8px;
+  }
+  .form-links a {
+    font-size: 16px;
   }
 
-  .form-links a {
-    font-size: 1rem;
+  .form-1 {
+    height: 500px;
   }
 }
