--- a/leningrad/app/authentication/registration-style.css
+++ b/leningrad/app/authentication/registration-style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background: linear-gradient(to bottom, #fff, #f5f5dc);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(233, 231, 225, 1));
   display: flex;
   justify-content: center;
 }
