--- a/leningrad/app/authentication/style.css
+++ b/leningrad/app/authentication/style.css
@@ -1,17 +1,28 @@
-/*html, body, .container {
-    height: 100%;
-    margin: 0;
-}*/
+:root {
+    --main-color: rgb(0, 136, 255);
+  }
 
 html, body {
     height: 100%;
     margin: 0;
 }
 
+.transition {
+    background: linear-gradient(white, rgb(200, 200, 200));
+    width: 100%;
+    height: 50%;
+    position: fixed;
+    top: 50%;
+    left: 0;
+    z-index: -1;
+}
+
 body {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: "Sofia sans", sans-serif;
+    font-size: 18px;
 }
 
 .enter_sign {
@@ -22,36 +33,63 @@ body {
     margin: 0;
 }
 
-.input_border {
-    color: blue;
+.input_border1 {
+    color: var(--main-color);
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
 
-    border: 2px solid blue;
-    border-radius: 20px;
-    width: 25%;
+    border: 2px solid var(--main-color);
+    border-radius: 40px;
+    width: 100%;
     background-color:white;
     text-align: left;
-    padding: 0;
+    padding: 13px 0;
+    font-weight: bold;
+    margin: 5px 0;
+}
+
+.input_border2 {
+    color: var(--main-color);
+    display: flex;
+    flex-direction: column;
+
+    border: 2px solid var(--main-color);
+    border-radius: 40px;
+    width: 100%;
+    background-color:white;
+    text-align: left;
+    padding: 30px 50px 60px 50px;
     margin: 0;
 }
 
 .input_piece {
+    width: 100%;
+}
+
+.input_left {
     display: flex;
-    align-items: flex-start;
-    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    margin: 5px;
+}
+.input_center {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 5px;
 }
 
 .input_label {
-    color: blue; margin: 0 0 5px 0
+    color: var(--main-color);
+    margin: 0 0 5px 20px;
 }
 .input_text {
-    border: 1px solid blue;
-    border-radius: 20px;
-    background-color:white;
-    font-size: 15px;
+    border: 1px solid var(--main-color);
+    border-radius: 40px;
+    background-color: white;
+    font-size: 24px;
+    padding: 10px;
+    width: 100%;
 }
 
 .caution_buttons {
@@ -59,7 +97,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    color: blue;
-    margin: 0;
+    color: var(--main-color);
+    margin: 35px 0 0 0;
     padding: 0;
+}
+
+.hyper_register {
+    text-decoration-line: underline;
+    text-underline-position: auto;
+    text-decoration-thickness: 1px;
 }
