--- a/leningrad/app/authentication/registration-style.css
+++ b/leningrad/app/authentication/registration-style.css
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-  margin-top: 100px;
+  margin-top: 189px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -26,6 +26,7 @@ main {
 .highlight {
   color: #0D74BD;
   font-family: 'Geologica', sans-serif;
+  font-weight: bold;
 }
 
 .box {
@@ -39,7 +40,9 @@ main {
   padding: 24px;
   box-sizing: border-box;
 }
-
+.qw {
+  color: rgba(13, 116, 189, 1);
+}
 .form {
   height: 73px;
   margin-bottom: 10px;
@@ -47,7 +50,7 @@ main {
 }
 
 .form-1 {
-  height: 552px;
+  height: 572px;
   flex-direction: column;
   justify-content: flex-start;
   background-color: white;
@@ -65,7 +68,8 @@ main {
 .input-group {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  align-items: center; /* Центрирует input */
+  width: 90%;
   margin-bottom: 15px;
   color: black;
   font-family: 'Geologica', sans-serif;
@@ -75,23 +79,26 @@ main {
   font-size: clamp(16px, 4vw, 25px);
   color: #0D74BD;
   text-align: left;
-  margin-left: 20px;
-  font-family: 'Geologica', sans-serif;
+  width: 90%; 
+  margin-left: 15px; 
 }
 
 .input-group input {
   padding: 10px;
   border: 2px solid #0D74BD;
   border-radius: 40px;
-  width: 100%;
+  width: 100%; /* Растягиваем input на всю ширину */
+  max-width: 609px; /* Задаем максимальную ширину */
   font-size: clamp(16px, 4vw, 18px);
   text-align: left;
   padding-left: 15px;
   box-sizing: border-box;
+  height: 65px;
 }
 
+
 .form-links {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -99,7 +106,7 @@ main {
 }
 
 .form-links a {
-  color: #0D74BD;
+  color: rgba(11, 131, 217, 1);
   font-size: clamp(16px, 4vw, 25px);
   font-family: 'Geologica', sans-serif;
   text-decoration: underline;
@@ -125,6 +132,7 @@ main {
   .input-group input {
     font-size: 16px;
     padding: 8px;
+    height: 45px;
   }
   .form-links a {
     font-size: 16px; 
@@ -133,3 +141,4 @@ main {
     height: 500px;
   }
 }
+
