--- a/leningrad/app/authentication/style.css
+++ b/leningrad/app/authentication/style.css
@@ -1,14 +1,15 @@
 :root {
-    --main-color: rgb(0, 136, 255);
+    --main-color: #0D74BD;
   }
 
 html, body {
     height: 100%;
+    width: 100%;
     margin: 0;
 }
 
 .transition {
-    background: linear-gradient(white, rgb(200, 200, 200));
+    background: linear-gradient(#FFFFFF, #E9E7E1);
     width: 100%;
     height: 50%;
     position: fixed;
@@ -21,20 +22,19 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: "Sofia sans", sans-serif;
-    font-size: 18px;
+    font-family: "Geologica";
+    font-size: 25px;
 }
 
 .enter_sign {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 38%;
     margin: 0;
 }
 
 .input_border1 {
-    color: var(--main-color);
     display: flex;
     justify-content: center;
 
@@ -44,26 +44,41 @@ body {
     background-color:white;
     text-align: left;
     padding: 13px 0;
-    font-weight: bold;
+
     margin: 5px 0;
+}
+
+.enter_style {
+    font-weight: 700;
+    color: var(--main-color);
+}
+
+.reg_style {
+    font-weight: 400;
+    white-space: pre;
+    color: #706F6D;
 }
 
 .input_border2 {
     color: var(--main-color);
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     border: 2px solid var(--main-color);
     border-radius: 40px;
     width: 100%;
     background-color:white;
     text-align: left;
-    padding: 30px 50px 60px 50px;
     margin: 0;
 }
 
 .input_piece {
-    width: 100%;
+    width: 82%;
+    height: 100%;
+    font-weight: 400;
+    margin: 0;
+    padding-top: 6%;
 }
 
 .input_left {
@@ -81,29 +96,47 @@ body {
 
 .input_label {
     color: var(--main-color);
-    margin: 0 0 5px 20px;
+    margin: 0 0 5px 6%;
 }
+
 .input_text {
-    border: 1px solid var(--main-color);
+    border: 2px solid #A9CBE3;
     border-radius: 40px;
-    background-color: white;
-    font-size: 24px;
-    padding: 10px;
+    font-size: 25px;
+    padding: 10px 20px;
     width: 100%;
+}
+
+input:focus {
+    border-color: var(--main-color);
+    outline : none;
 }
 
 .caution_buttons {
-    width: 100%;
+    width: 82%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    text-align: right;
+    justify-content: center;
     color: var(--main-color);
-    margin: 35px 0 0 0;
-    padding: 0;
+    margin: 0;
+    padding: 7% 0 12% 0;
 }
 
 .hyper_register {
+    color: #0B83D9;
+    font-weight: 300;
     text-decoration-line: underline;
-    text-underline-position: auto;
-    text-decoration-thickness: 1px;
+    text-underline-offset: auto;
+    text-decoration-thickness: auto;
+    text-decoration-skip-ink: auto;
+}
+
+.result_page {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
