fix: add icon social

--- a/leningrad/app/components/LinkItem.module.css
+++ b/leningrad/app/components/LinkItem.module.css
@@ -1,6 +1,6 @@
 .container {
     text-align: center;
-    display: block;
+    display: flex;
   }
   
   .link {
@@ -8,6 +8,7 @@
     text-decoration: none;
     font-size: 0.8rem;
     transition: color 0.3s ease;
+    display: flex;
   }
   
   .link:hover {
@@ -17,6 +18,9 @@
   .icon {
     color: #656565;
     margin-right: 10px;
-    font-size: 20px;
+    width: 25px; /* Размер изображения */
+    height: 25px;
+    filter: invert(30%) sepia(10%) saturate(500%) hue-rotate(190deg); /* Перекрашиваем PNG */
+    transition: filter 0.3s ease;
   }
   
