--- a/leningrad/app/App.module.css
+++ b/leningrad/app/App.module.css
@@ -4,9 +4,8 @@
   }
   
   .customLinkListContainer {
-    display: flex;
-    min-width: 500px;
-    max-width: 500px;
+    display: block;
+    
   }
   
   /* Уникальные стили для элементов */
