--- a/leningrad/app/globals.css
+++ b/leningrad/app/globals.css
@@ -463,7 +463,7 @@ body {
 
 .about-stats {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   gap: 20px;
 }
 
@@ -474,6 +474,7 @@ body {
   background-color: white; /* Белый фон */
   text-align: center; /* Выравнивание текста и заголовков по центру */
   flex: 1;
+  max-width: 180px;
 }
 
 .stat-box h3 {
@@ -527,8 +528,9 @@ body {
 
   .about-stats {
     gap: 15px; /* Уменьшаем промежутки между элементами */
-    justify-content: center; /* Центрируем содержимое */
+    justify-content: space-around; /* Центрируем содержимое */
     align-items: center; /* Выравниваем элементы по центру */
+
   }
 
   .stat-box {
