--- a/leningrad/app/routes/routes.module.css
+++ b/leningrad/app/routes/routes.module.css
@@ -1,14 +1,76 @@
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@400;700&display=swap');
+
+
 .container {
-  text-align: center;
-  padding: 200px;
-  min-height: 500px; /* Гарантия, что контейнер не схлопнется */
+  font-family: 'Geologica', sans-serif;
+  background: linear-gradient(to bottom, #ffffff, #E9E7E1); /* Градиент от белого к бежевому */
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 
-.title {
-  font-size: 36px;
-  font-weight: bold;
-  margin-bottom: 20px;
+.button_container {
+  display: flex;
+  justify-content: center;
+  
+ 
+}
+
+.button_container .button {
+  margin: 0 auto; 
+  background-color: transparent;
 }
 
 
+.textWithImage {
+  position: relative; /* Позволяет располагать элементы внутри относительно друг друга */
+}
+
+.svg_image {
+  position: absolute;
+  top: 60px;
+  left: -140px;
+  width: 1000px;
+  height: 200px;
+  z-index: 9; /* SVG в фоне */
+}
+
+.header {
+  font-size: 70px;
+  margin-top: 100px;
+  margin-left: 110px;
+  position: relative;
+  z-index: 10; /* Текст поверх SVG */
+}
+
+/* Мобильные стили */
+@media (max-width: 768px) {
+  .container {
+    padding: 10px; /* Уменьшаем отступы на мобильных */
+  }
+
+  .svg_image {
+    width: 300px; /* SVG занимает всю ширину на мобильных */
+    height: 100px;
+    top: 80px; /* Подвигаем SVG, чтобы он не мешал */
+    left: 0;
+  }
+
+  .header {
+    font-size: 8vw; /* Размер шрифта зависит от ширины экрана */
+    margin-left: 40px;
+    text-align: left; /* Центрируем текст */
+  }
+
+  /* Для ImageSlider */
+  .imageContainer {
+    flex-direction: column; /* Слайды вертикально на мобильных */
+  }
+
+  .image {
+    width: 100%; /* Слайдеры занимают 90% ширины экрана */
+    margin-bottom: 10px;
+  }
+}
