--- a/leningrad/app/info-for-map/info-for-map-styles.css
+++ b/leningrad/app/info-for-map/info-for-map-styles.css
@@ -502,7 +502,6 @@
   .route-carousel {
     display: flex;
     align-items: center;
-    gap: 10px;
     width: 100%;
     justify-content: center;
     padding-top: 20px;
@@ -524,7 +523,7 @@
 
   .route-list {
     display: flex;
-    gap: 15px;
+    gap: 0px;
     padding: 0;
     margin: 0;
     list-style: none;
@@ -532,28 +531,31 @@
 
   .route-list li {
     display: inline-block;
+    margin-right: -15px;
+    margin-left: -12px;
+  }
+
+  .route-list li:last-child {
+    margin-right: 0; /* Убираем отступ у последней кнопки */
   }
 
   .route-list button {
-    padding: 10px 15px;
-    font-size: 16px;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 15px;
     border-radius: 10px;
     background: transparent;
     color: rgba(0, 0, 0, 1);
     cursor: pointer;
     transition: background 0.3s ease;
     white-space: normal;
-    word-wrap: break-word;
     width: 35vw;
     height: 7.5vh;
     /* Устанавливаем высоту */
-    gap: 10px;
     text-align: center;
     box-sizing: border-box;
-  }
-
-  .route-list button:hover {
-    background: rgba(221, 239, 252, 1);
+    overflow: hidden; /* Обрезает текст, если он не вмещается */
+    text-overflow: ellipsis;
   }
 
   .route-list button:active {
