--- a/leningrad/app/authentication-authorization/authentication-authorization-style.css
+++ b/leningrad/app/authentication-authorization/authentication-authorization-style.css
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-  margin-top: 17.5vh;
+  margin-top: 5.5vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -67,8 +67,8 @@ main {
   border: 2px solid #0D74BD;
   border-radius: 50px;
   width: clamp(300px, 80vw, 738px);
-  max-width: 90%;
-  padding: 0vh;
+  max-width: 70%;
+  padding: 2vh;
   box-sizing: border-box;
 }
 
@@ -77,7 +77,7 @@ main {
 }
 
 .form {
-  padding: 0;
+  padding: 1.5vh;
   margin-bottom: 1vh;
   background-color: white;
 }
@@ -118,7 +118,7 @@ main {
 }
 
 .input-group input {
-  padding: 1vh;
+  padding: 3vh;
   border: 2px solid #0D74BD;
   border-radius: 40px;
   width: 100%;
@@ -160,7 +160,7 @@ main {
   }
 
   .box {
-    width: 95%;
+   
     padding: 2vh;
     font-size: 8px;
   }
@@ -182,6 +182,7 @@ main {
 
   .form-1 {
     height: auto;
+    width: 60vh;
   }
 }
 
@@ -211,4 +212,6 @@ main {
   .box {
     padding: 1vh;
   }
+
+  
 }
