--- a/leningrad/app/authentication-authorization/authentication-authorization-style.css
+++ b/leningrad/app/authentication-authorization/authentication-authorization-style.css
@@ -5,13 +5,11 @@ body {
   padding: 0;
   min-height: 100vh;
   background: #FFFFFF;
-  display: flex;
   justify-content: center;
 }
 
 main {
   margin-top: 5.5vh;
-  display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -154,14 +152,14 @@ main {
   cursor: pointer;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 500px) {
   .text {
     font-size: 16px;
   }
 
   .box {
-   
-    padding: 2vh;
+    
+    padding: 1vh;
     font-size: 8px;
   }
 
@@ -182,7 +180,7 @@ main {
 
   .form-1 {
     height: auto;
-    width: 60vh;
+    width: 100vw;
   }
 }
 
