--- a/leningrad/app/authentication-authorization/authentication-authorization-style.css
+++ b/leningrad/app/authentication-authorization/authentication-authorization-style.css
@@ -6,6 +6,7 @@ body {
   min-height: 100vh;
   background: #FFFFFF;
   justify-content: center;
+  overflow: hidden;
 }
 
 main {
@@ -16,9 +17,10 @@ main {
 }
 
 .text {
-  font-size: clamp(16px, 2.5vh, 25px);
+  font-size: clamp(30px, 2.5vh, 48px);
   color: rgba(112, 111, 109, 1);
   font-family: 'Geologica', sans-serif;
+  margin-bottom: 5vh;
 }
 
 .highlight {
@@ -29,6 +31,43 @@ main {
   margin: 0;
 }
 
+.forgot-password {
+  font-family: 'Geologica', sans-serif;
+  font-size: clamp(16px, 2.5vh, 25px);
+  color: rgba(11, 131, 217, 1);
+  text-align: left;
+  width: 90%;
+  margin-left: 2.5vw;
+  text-decoration: underline;
+}
+
+.smile {
+  margin-top: 50px;
+  margin-bottom: 30px;
+  text-align: center;
+  justify-content: center;
+}
+
+
+
+.forgot-password-message {
+  font-size: 50px;
+  color: #0D74BD;
+  font-family: 'Geologica', sans-serif;
+  text-align: center;
+  justify-content: center;
+  margin-top: 30vh;
+  display: flex; /* Делаем контейнер flex-контейнером */
+  flex-direction: column; /* Элементы выстраиваются в столбец */
+  align-items: center; /* Выравниваем элементы по центру по горизонтали */
+  gap: 10px; /* Добавляем отступ между элементами */
+}
+
+.forgot-password-message button {
+  font-size: 16px;
+  text-decoration: underline;
+}
+
 .switch {
   cursor: pointer;
 }
@@ -36,6 +75,7 @@ main {
 .switch:hover {
   text-decoration: underline;
 }
+
 
 .background-transition {
   background: linear-gradient(#FFFFFF, #E9E7E1);
@@ -62,7 +102,6 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid #0D74BD;
   border-radius: 50px;
   width: clamp(300px, 80vw, 738px);
   max-width: 70%;
@@ -70,8 +109,6 @@ main {
   box-sizing: border-box;
   cursor: pointer;
 }
-
-
 
 .qw {
   color: rgba(13, 116, 189, 1);
@@ -85,10 +122,9 @@ main {
 
 .form-1 {
   /*min-height: 56vh;*/
-  height: auto;
+  height: 500px;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: white;
   padding-top: 5vh;
   margin-bottom: 10px;
 }
@@ -111,22 +147,28 @@ main {
 }
 
 .input-wrapper {
-  position: relative; /* Делаем контейнер для позиционирования */
+  position: relative;
   width: 100%;
 }
 
 .input-wrapper input {
   width: 100%;
-  padding-right: 2.5rem; /* Делаем отступ для иконки */
+  padding-right: 2.5rem;
+  /* Отступ для иконки глаза */
+  box-sizing: border-box;
+  /* Убедитесь, что padding включен в ширину */
 }
 
 .eye-icon {
   position: absolute;
-  right: 1rem; /* Смещаем иконку внутрь поля справа */
-  top: 50%;
+  right: 2.5rem;
+  /* Смещаем иконку внутрь поля справа */
+  top: 60%;
   transform: translateY(-50%);
   cursor: pointer;
   color: #0D74BD;
+  z-index: 2;
+  /* Убедитесь, что иконка поверх поля ввода */
 }
 
 .input-group label {
@@ -134,12 +176,12 @@ main {
   color: #0D74BD;
   text-align: left;
   width: 90%;
-  margin-left: 1.5vh;
+  margin-left: 2.5vh;
 }
 
 .input-group input {
   padding: 3vh;
-  border: 2px solid #0D74BD;
+  border: 1.5px solid rgba(169, 203, 227, 1);
   border-radius: 40px;
   width: 100%;
   max-width: 609px;
@@ -147,8 +189,60 @@ main {
   text-align: left;
   padding-left: 1.5vh;
   box-sizing: border-box;
-  height: 5vh;
+  height: 55px;
+  margin-bottom: 1.5vh;
 }
+
+.button {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  font-family: 'Geologica', sans-serif;
+  border-radius: 40px;
+  padding: 3px;
+  cursor: pointer;
+  background-color: gray;
+  font-size: 27px;
+  color: white;
+  margin-top: 50px;
+  height: 65px;
+  width: 163px;
+  cursor: not-allowed;
+  margin-left: -0.5vw;
+}
+
+.error-message {
+  color: rgba(208, 3, 82, 1);
+  font-size: 15px;
+  margin-bottom: 10px;
+  
+}
+
+.button.active {
+  background-color: #0D74BD; /* Синий цвет, когда все поля заполнены */
+  cursor: pointer; /* Курсор "указатель" для активных кнопок */
+}
+
+.button.registration {
+  width: 360px;
+  height: 6vh;
+  margin-top: 30px;
+}
+
+.button.login {
+  width: 163px;
+  height: 5.5vh;
+  margin-top: 50px;
+}
+
+.form-content.registration .input-group {
+  margin-bottom: 5px;
+}
+
+.form-content.login .input-group {
+  margin-bottom: 5px;
+}
+
 
 .form-links {
   width: 90%;
@@ -176,18 +270,27 @@ main {
 
 @media screen and (max-width: 500px) {
   .text {
+    font-size: 25px;
+  }
+
+  .forgot-password-message {
+    font-size: 27px;
+  }
+
+  .forgot-password {
     font-size: 16px;
+    margin-left: 3.5vh;
   }
 
   .box {
-    
+
     padding: 1vh;
     font-size: 8px;
   }
 
   .input-group label {
     font-size: 16px;
-    margin-left: 1vh;
+    margin-left: 2vh;
   }
 
   .input-group input {
@@ -203,6 +306,25 @@ main {
   .form-1 {
     height: auto;
     width: 100vw;
+  }
+
+  .button.registration{
+    width: 200px;
+    font-size: 16px;
+    padding: 12px; 
+    height: 55px;
+  }
+
+  .button.login {
+    width: 100px;
+    font-size: 16px;
+    padding: 12px;
+    height: 55px;
+  }
+
+  .eye-icon {
+    right: 0.7rem;
+    top: 57%;
   }
 }
 
@@ -233,5 +355,5 @@ main {
     padding: 1vh;
   }
 
-  
+
 }
