--- a/leningrad/app/info-for-map/info-for-map-styles.css
+++ b/leningrad/app/info-for-map/info-for-map-styles.css
@@ -224,8 +224,11 @@
 }
 
 .route-list {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  text-decoration: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
   gap: 20px;
   margin-top: 15px;
   padding-left: 0;
