--- a/leningrad/app/authentication-authorization/authentication-authorization-style.css
+++ b/leningrad/app/authentication-authorization/authentication-authorization-style.css
@@ -214,8 +214,8 @@ main {
 .error-message {
   color: rgba(208, 3, 82, 1);
   font-size: 15px;
-  margin-bottom: 10px;
-  
+  margin-bottom: 3px;
+  margin-top: 5px;
 }
 
 .button.active {
