--- a/leningrad/app/authentication-authorization/authentication-authorization-style.css
+++ b/leningrad/app/authentication-authorization/authentication-authorization-style.css
@@ -38,6 +38,9 @@ main {
   text-align: left;
   width: 90%;
   margin-left: 2.5vw;
+  
+}
+.forgot-password:hover {
   text-decoration: underline;
 }
 
@@ -162,13 +165,11 @@ main {
 .eye-icon {
   position: absolute;
   right: 2.5rem;
-  /* Смещаем иконку внутрь поля справа */
   top: 60%;
   transform: translateY(-50%);
   cursor: pointer;
   color: #0D74BD;
   z-index: 2;
-  /* Убедитесь, что иконка поверх поля ввода */
 }
 
 .input-group label {
@@ -190,22 +191,23 @@ main {
   padding-left: 1.5vh;
   box-sizing: border-box;
   height: 55px;
-  margin-bottom: 1.5vh;
+  margin-bottom: 2vh;
 }
 
 .button {
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: center;
+  text-align: center;
   font-family: 'Geologica', sans-serif;
   border-radius: 40px;
   padding: 3px;
   cursor: pointer;
   background-color: gray;
-  font-size: 27px;
+  font-size: 25px;
   color: white;
   margin-top: 50px;
-  height: 65px;
+  height: 6.5vh;
   width: 163px;
   cursor: not-allowed;
   margin-left: -0.5vw;
@@ -270,7 +272,7 @@ main {
 
 @media screen and (max-width: 500px) {
   .text {
-    font-size: 25px;
+    font-size: clamp(20px, 2.5vh, 25px);
   }
 
   .forgot-password-message {
@@ -283,7 +285,6 @@ main {
   }
 
   .box {
-
     padding: 1vh;
     font-size: 8px;
   }
@@ -309,17 +310,19 @@ main {
   }
 
   .button.registration{
+    margin-top: 60px;
     width: 200px;
-    font-size: 16px;
-    padding: 12px; 
-    height: 55px;
+    font-size: clamp(12px, 2.5vh, 16px);
+    padding: 10px; 
+    height: 45px;
   }
 
   .button.login {
+    margin-top: 60px;
     width: 100px;
-    font-size: 16px;
-    padding: 12px;
-    height: 55px;
+    font-size: clamp(12px, 2.5vh, 16px);;
+    padding: 10px;
+    height: 45px;
   }
 
   .eye-icon {
