--- a/leningrad/app/authentication-authorization/authentication-authorization-style.css
+++ b/leningrad/app/authentication-authorization/authentication-authorization-style.css
@@ -20,6 +20,7 @@ main {
   font-size: clamp(30px, 2.5vh, 48px);
   color: rgba(112, 111, 109, 1);
   font-family: 'Geologica', sans-serif;
+  cursor: pointer;
   margin-bottom: 5vh;
 }
 
@@ -29,6 +30,7 @@ main {
   font-weight: bold;
   padding: 0;
   margin: 0;
+  cursor: default;
 }
 
 .forgot-password {
@@ -209,7 +211,7 @@ main {
   margin-top: 50px;
   height: 6.5vh;
   width: 163px;
-  cursor: not-allowed;
+  cursor: pointer;
   margin-left: -0.5vw;
 }
 
@@ -220,9 +222,21 @@ main {
   margin-top: 5px;
 }
 
+button:disabled {
+  cursor: not-allowed;  
+}
+
+button:not(:disabled) {
+  cursor: pointer; 
+}
+
 .button.active {
   background-color: #0D74BD; /* Синий цвет, когда все поля заполнены */
   cursor: pointer; /* Курсор "указатель" для активных кнопок */
+}
+
+input, textarea, button {
+  cursor: inherit;
 }
 
 .button.registration {
